--- a/package.json
+++ b/package.json
@@ -11,17 +11,22 @@
   },
   "dependencies": {
     "@react-native-async-storage/async-storage": "^1.17.11",
+    "@react-native-community/datetimepicker": "^6.7.1",
     "@react-native-masked-view/masked-view": "^0.2.8",
     "@react-navigation/native": "^6.1.0",
     "@react-navigation/stack": "^6.3.8",
     "axios": "^1.2.1",
+    "chart.js": "^4.0.1",
     "moment": "^2.29.4",
     "react": "18.1.0",
+    "react-chartjs-2": "^5.0.1",
     "react-native": "0.70.6",
+    "react-native-chartjs": "^1.0.3",
     "react-native-gesture-handler": "^2.8.0",
     "react-native-paper": "^5.0.1",
     "react-native-safe-area-context": "^4.4.1",
     "react-native-screens": "^3.18.2",
+    "react-native-select-dropdown": "^3.1.0",
     "react-native-splash-screen": "^3.3.0",
     "react-native-vector-icons": "^9.2.0",
     "react-redux": "^8.0.5",
