--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "react-chartjs-2": "^5.0.1",
     "react-native": "0.70.6",
     "react-native-chartjs": "^1.0.3",
+    "react-native-device-info": "^10.3.0",
     "react-native-gesture-handler": "^2.8.0",
     "react-native-paper": "^5.0.1",
     "react-native-safe-area-context": "^4.4.1",
