--- a/ios/TimeTrack/Info.plist
+++ b/ios/TimeTrack/Info.plist
@@ -35,6 +35,8 @@
 			</dict>
 		</dict>
 	</dict>
+	<key>NSCameraUsageDescription</key>
+	<string>TimeTrack wants your camera permission for QR Scanner</string>
 	<key>NSLocationWhenInUseUsageDescription</key>
 	<string/>
 	<key>UILaunchStoryboardName</key>
