--- a/package.json
+++ b/package.json
@@ -17,14 +17,21 @@
     "@react-navigation/stack": "^6.3.8",
     "axios": "^1.2.1",
     "chart.js": "^4.0.1",
+    "deprecated-react-native-prop-types": "^2.3.0",
     "moment": "^2.29.4",
+    "patch-package": "^6.5.0",
     "react": "18.1.0",
     "react-chartjs-2": "^5.0.1",
     "react-native": "0.70.6",
+    "react-native-camera": "^4.2.1",
     "react-native-chartjs": "^1.0.3",
     "react-native-device-info": "^10.3.0",
+    "react-native-geolocation-service": "^5.3.1",
     "react-native-gesture-handler": "^2.8.0",
+    "react-native-get-location": "^2.2.1",
     "react-native-paper": "^5.0.1",
+    "react-native-permissions": "^3.6.1",
+    "react-native-qrcode-scanner": "^1.5.5",
     "react-native-safe-area-context": "^4.4.1",
     "react-native-screens": "^3.18.2",
     "react-native-select-dropdown": "^3.1.0",
