--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@react-native-masked-view/masked-view": "^0.2.8",
     "@react-navigation/native": "^6.1.0",
     "@react-navigation/stack": "^6.3.8",
+    "@types/react": "^18.0.26",
     "axios": "^1.2.1",
     "chart.js": "^4.0.1",
     "deprecated-react-native-prop-types": "^2.3.0",
@@ -26,9 +27,9 @@
     "react-native-camera": "^4.2.1",
     "react-native-chartjs": "^1.0.3",
     "react-native-device-info": "^10.3.0",
+    "react-native-geo-fencing": "^0.1.0",
     "react-native-geolocation-service": "^5.3.1",
     "react-native-gesture-handler": "^2.8.0",
-    "react-native-get-location": "^2.2.1",
     "react-native-paper": "^5.0.1",
     "react-native-permissions": "^3.6.1",
     "react-native-qrcode-scanner": "^1.5.5",
