--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "react-chartjs-2": "^5.0.1",
     "react-native": "0.70.6",
     "react-native-camera": "^4.2.1",
+    "react-native-chart-kit": "^6.12.0",
     "react-native-chartjs": "^1.0.3",
     "react-native-device-info": "^10.3.0",
     "react-native-geo-fencing": "^0.1.0",
@@ -37,6 +38,7 @@
     "react-native-screens": "^3.18.2",
     "react-native-select-dropdown": "^3.1.0",
     "react-native-splash-screen": "^3.3.0",
+    "react-native-svg": "^13.6.0",
     "react-native-toast-message": "^2.1.5",
     "react-native-vector-icons": "^9.2.0",
     "react-redux": "^8.0.5",
