--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -266,7 +266,8 @@ dependencies {
 
     implementation "androidx.swiperefreshlayout:swiperefreshlayout:1.0.0"
 
-    implementation project(':react-native-geo-fencing')
+    // For RN Boundary
+    implementation "androidx.core:core-ktx:+"
 
     debugImplementation("com.facebook.flipper:flipper:${FLIPPER_VERSION}") {
         exclude group:'com.facebook.fbjni'
