--- a/ios/Podfile
+++ b/ios/Podfile
@@ -1,6 +1,6 @@
 require_relative '../node_modules/react-native/scripts/react_native_pods'
 require_relative '../node_modules/@react-native-community/cli-platform-ios/native_modules'
-
+$RNFirebaseAsStaticFramework = true
 platform :ios, '12.4'
 install! 'cocoapods', :deterministic_uuids => false
 
@@ -54,7 +54,7 @@ target 'TimeTrack' do
     # Upcoming versions of React Native may rely on get_default_flags(), but
     # we make it explicit here to aid in the React Native upgrade process.
     :hermes_enabled => false,
-    :fabric_enabled => flags[:fabric_enabled],
+    # :fabric_enabled => flags[:fabric_enabled],
     # Enables Flipper.
     #
     # Note that if you have use_frameworks! enabled, Flipper will not work and
