--- a/ios/TimeTrack/Info.plist
+++ b/ios/TimeTrack/Info.plist
@@ -50,6 +50,11 @@
 		<string>FontAwesome5_Solid.ttf</string>
 		<string>MaterialCommunityIcons.ttf</string>
 	</array>
+	<key>UIBackgroundModes</key>
+	<array>
+		<string>fetch</string>
+		<string>remote-notification</string>
+	</array>
 	<key>UILaunchStoryboardName</key>
 	<string>LaunchScreen.storyboard</string>
 	<key>UIRequiredDeviceCapabilities</key>
