--- a/package.json
+++ b/package.json
@@ -12,6 +12,9 @@
   "dependencies": {
     "@react-native-async-storage/async-storage": "^1.17.11",
     "@react-native-community/datetimepicker": "^6.7.1",
+    "@react-native-community/push-notification-ios": "^1.10.1",
+    "@react-native-firebase/app": "^16.5.0",
+    "@react-native-firebase/messaging": "^16.5.0",
     "@react-native-masked-view/masked-view": "^0.2.8",
     "@react-navigation/native": "^6.1.0",
     "@react-navigation/stack": "^6.3.8",
@@ -32,6 +35,7 @@
     "react-native-gesture-handler": "^2.8.0",
     "react-native-paper": "^5.0.1",
     "react-native-permissions": "^3.6.1",
+    "react-native-push-notification": "^8.1.1",
     "react-native-qrcode-scanner": "^1.5.5",
     "react-native-safe-area-context": "^4.4.1",
     "react-native-screens": "^3.18.2",
