--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "axios": "^1.2.1",
     "chart.js": "^4.0.1",
     "deprecated-react-native-prop-types": "^2.3.0",
+    "geolib": "^3.3.3",
     "moment": "^2.29.4",
     "patch-package": "^6.5.0",
     "react": "18.1.0",
