--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "react-native-toast-message": "^2.1.5",
     "react-native-vector-icons": "^9.2.0",
     "react-redux": "^8.0.5",
+    "react-uuid": "^2.0.0",
     "redux": "^4.2.0",
     "redux-persist": "^6.0.0",
     "redux-reset": "^0.3.0",
