--- a/package.json
+++ b/package.json
@@ -50,7 +50,8 @@
     "redux": "^4.2.0",
     "redux-persist": "^6.0.0",
     "redux-reset": "^0.3.0",
-    "redux-thunk": "^2.4.2"
+    "redux-thunk": "^2.4.2",
+    "sunburst-chart": "^1.16.3"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
