--- a/package.json
+++ b/package.json
@@ -51,7 +51,9 @@
     "redux-persist": "^6.0.0",
     "redux-reset": "^0.3.0",
     "redux-thunk": "^2.4.2",
-    "sunburst-chart": "^1.16.3"
+    "sunburst-chart": "^1.16.3",
+    "victory-native": "^36.6.8",
+    "victory-pie": "^36.6.8"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
