--- a/package.json
+++ b/package.json
@@ -20,17 +20,13 @@
     "@react-navigation/stack": "^6.3.8",
     "@types/react": "^18.0.26",
     "axios": "^1.2.1",
-    "chart.js": "^4.0.1",
     "deprecated-react-native-prop-types": "^2.3.0",
     "geolib": "^3.3.3",
     "moment": "^2.29.4",
     "patch-package": "^6.5.0",
     "react": "18.1.0",
-    "react-chartjs-2": "^5.0.1",
     "react-native": "0.70.6",
     "react-native-camera": "^4.2.1",
-    "react-native-chart-kit": "^6.12.0",
-    "react-native-chartjs": "^1.0.3",
     "react-native-device-info": "^10.3.0",
     "react-native-geolocation-service": "^5.3.1",
     "react-native-gesture-handler": "^2.8.0",
@@ -51,9 +47,7 @@
     "redux-persist": "^6.0.0",
     "redux-reset": "^0.3.0",
     "redux-thunk": "^2.4.2",
-    "sunburst-chart": "^1.16.3",
-    "victory-native": "^36.6.8",
-    "victory-pie": "^36.6.8"
+    "victory-native": "^36.6.8"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
