--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -138,7 +138,7 @@ android {
     compileSdkVersion rootProject.ext.compileSdkVersion
 
     defaultConfig {
-        applicationId "com.timetrack"
+        applicationId "com.ttmobile.timetrack_hv1"
         minSdkVersion rootProject.ext.minSdkVersion
         targetSdkVersion rootProject.ext.targetSdkVersion
         versionCode 1
