--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "react-native-screens": "^3.18.2",
     "react-native-select-dropdown": "^3.1.0",
     "react-native-splash-screen": "^3.3.0",
+    "react-native-store-version": "^1.4.1",
     "react-native-svg": "^13.6.0",
     "react-native-toast-message": "^2.1.5",
     "react-native-vector-icons": "^9.2.0",
@@ -47,6 +48,7 @@
     "redux-persist": "^6.0.0",
     "redux-reset": "^0.3.0",
     "redux-thunk": "^2.4.2",
+    "sp-react-native-in-app-updates": "^1.3.1",
     "victory-native": "^36.6.8"
   },
   "devDependencies": {
