--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "axios": "^1.2.1",
     "deprecated-react-native-prop-types": "^2.3.0",
     "geolib": "^3.3.3",
+    "haversine": "^1.1.1",
     "moment": "^2.29.4",
     "patch-package": "^6.5.0",
     "react": "18.1.0",
@@ -30,6 +31,7 @@
     "react-native-device-info": "^10.3.0",
     "react-native-geolocation-service": "^5.3.1",
     "react-native-gesture-handler": "^2.9.0",
+    "react-native-maps": "^1.7.1",
     "react-native-paper": "^5.0.1",
     "react-native-permissions": "^3.6.1",
     "react-native-push-notification": "^8.1.1",
