--- a/android/gradle.properties
+++ b/android/gradle.properties
@@ -41,5 +41,5 @@ newArchEnabled=false
 
 MYAPP_UPLOAD_STORE_FILE=timetrack.keystore
 MYAPP_UPLOAD_KEY_ALIAS=timetrack
-MYAPP_UPLOAD_STORE_PASSWORD=Zune@123
-MYAPP_UPLOAD_KEY_PASSWORD=Zune@123
+MYAPP_UPLOAD_STORE_PASSWORD=Zune@!123
+MYAPP_UPLOAD_KEY_PASSWORD=Zune@!123
