--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "react-native-geolocation-service": "^5.3.1",
     "react-native-gesture-handler": "^2.9.0",
     "react-native-maps": "^1.7.1",
+    "react-native-otp-textinput": "^1.1.1",
     "react-native-paper": "^5.0.1",
     "react-native-permissions": "^3.6.1",
     "react-native-push-notification": "^8.1.1",
